# vizpatch

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md
agent/: .env.example  .gitignore  Dockerfile  README.md  context.md.example  docker-compose.yml  pyproject.toml
agent/prompts/: classify.txt  generate.txt
agent/src/: classify.py  config.py  crypto.py  draft.py  generate.py  imap_client.py  llm.py  logging_setup.py  main.py  pii.py  provider_config.py  state.py  status_writer.py
agent/tests/: conftest.py  test_classify.py  test_config_multi_agent.py  test_config_provider_override.py  test_draft.py  test_draft_header_injection.py  test_generate.py  test_generate_with_history.py  test_generate_with_style.py  test_imap_client_auto_create.py  test_imap_client_history.py  test_llm.py  test_main_history.py  test_main_message_id.py  test_main_multi_account.py  test_pii.py  test_pii_sync.py  test_provider_config.py  test_state.py
webui/: Dockerfile  docker-entrypoint.sh  pyproject.toml
webui/prompts/: chat-system.txt  context-seed.txt  style-extract.txt
webui/src/: agents_io.py  auth.py  chat.py  chat_tools.py  config_io.py  crypto.py  docker_ctrl.py  llm.py  llm_detect.py  llm_seed.py  logging_setup.py  main.py  migration.py  pii.py  state_reader.py  style_extract.py  timefmt.py  validate_conn.py
webui/src/templates/: _agent_form.html  _chat.html  base.html  (+13 more)
webui/static/: chat.css  chat.js  style.css
webui/tests/: conftest.py  test_addin_docs.py  test_addin_installer.py  test_addin_mailcontext.py  test_addin_manifest.py  test_addin_readonly.py  test_addin_verify_password.py  test_agents_io.py  test_auth.py  test_chat.py  test_chat_size_limits.py  test_chat_tools.py  test_chat_tools_pseudonym.py  test_config_io.py  test_connect_config.py  test_crypto.py  test_crypto_sync.py  test_csrf.py  test_docker_ctrl.py  test_docker_ctrl_update.py  test_draft_header_injection.py  test_endpoints_addin.py  test_endpoints_agent.py  test_endpoints_chat.py  test_endpoints_config.py  test_endpoints_datenschutz.py  test_endpoints_reset.py  test_endpoints_seed.py  test_endpoints_style.py  test_endpoints_update.py  test_error_leak.py  test_healthz.py  test_llm_detect.py  test_llm_seed.py  test_llm_sync.py  test_migration.py  test_model_defaults_sync.py  test_provider_config_sync.py  test_rate_limits.py  test_save_conn_check.py  (+9 more)
(+232 files in other folders)
