[project]
name = "vizpatch"
version = "1.0.0"
description = "Vizpatch — schmaler KI-Email-Agent (IMAP + Anthropic) für eine Tankstelle"
requires-python = ">=3.13"
dependencies = [
    "imap-tools>=1.7,<2.0",
    "anthropic>=0.42,<1.0",
    "python-dotenv>=1.0,<2.0",
    "dnspython>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
