[project]
name = "vizpatch-webui"
version = "1.2.0"
description = "Vizpatch WebUI — Browser-basierte Konfig & Steuerung"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139,<1.0",
    "uvicorn[standard]>=0.51,<1.0",
    "jinja2>=3.1.6,<4.0",
    "python-multipart>=0.0.32,<1.0",
    "docker>=7.2,<8.0",
    "anthropic>=0.42,<1.0",
    "python-dotenv>=1.0,<2.0",
    "bcrypt>=4.2,<5.0",
    "slowapi>=0.1.9,<1.0",
    "cryptography>=49,<50",
    "imap-tools>=1.7,<2.0",
    "openai>=2.45,<3.0",
    "google-genai>=2.11,<3.0",
    "dnspython>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "httpx>=0.28,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_conn_check: Live-Verbindungsprüfung (validate_conn) NICHT stubben — für Tests der Prüf-Logik selbst.",
]
